--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>BizUp | WELCOME TO OUR OFFICIAL WEBSITE</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
         <div class="container nav-container">
           <a href=""
@@ -72,7 +72,7 @@
         <div class="features-container">
           <div class="feature-left">
             <!-- <p class="feature">Feature Business</p> -->
-            <img src="/images/online-account.png" alt="" />
+            <img src="/images/coins.jpg" alt="" />
           </div>
           <div class="feature-right">
             <div class="feature-right-list">
@@ -111,6 +111,11 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <section>
+      <div class="business-Courses">
+        <h1></h1>
       </div>
     </section>
     <section class="form">
