--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             ideas to invest in the right business!
           </p>
           <div class="hero-btn">
-            <a href="" class="btn">Get Started &darr;</a>
+            <a href="" class="btn btn1">Get Started &darr;</a>
             <a href="" class="btn btn-outline">Download memo &darr;</a>
           </div>
         </div>
@@ -72,7 +72,7 @@
         <div class="features-container">
           <div class="feature-left">
             <!-- <p class="feature">Feature Business</p> -->
-            <img src="/images/coins.jpg" alt="" />
+            <img src="/images/Business-and-Finance-Feature-Image.jpg" alt="" />
           </div>
           <div class="feature-right">
             <div class="feature-right-list">
@@ -113,9 +113,178 @@
         </div>
       </div>
     </section>
-    <section>
-      <div class="business-Courses">
-        <h1></h1>
+    <section class="feature2">
+      <div class="container">
+        <div class="biz-text">
+          <h2>Invest wisely and efficiently</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum,
+            mollitia reiciendis. Odio ullam beatae eos nam officiis magni sit
+            aliquam molestiae reprehenderit totam, quisquam, nihil recusandae,
+            quam praesentium eius voluptate!
+          </p>
+        </div>
+
+        <div class="business-feature">
+          <article class="business loan">
+            <div class="biz-img">
+              <img src="./images/stock-exchange.jpg" alt="img" />
+            </div>
+            <div class="biz-content">
+              <h4>Loan and Overdraft</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
+                dolor quos facilis eaque, a laudantium.
+              </p>
+              <a href="" class="btn-blue"> Learn more</a>
+            </div>
+          </article>
+          <article class="business">
+            <div class="biz-img">
+              <img src="./images/Finance.jpg" alt="img" />
+            </div>
+            <div class="biz-content">
+              <h4>Loan and Overdraft</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
+                dolor quos facilis eaque, a laudantium.
+              </p>
+              <a href="" class="btn-blue"> Learn more</a>
+            </div>
+          </article>
+          <article class="business">
+            <div class="biz-img">
+              <img
+                src="./images/Business-and-Finance-Feature-Image.jpg"
+                alt="img"
+              />
+            </div>
+            <div class="biz-content">
+              <h4>Loan and Overdraft</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
+                dolor quos facilis eaque, a laudantium.
+              </p>
+              <a href="" class="btn-blue"> Learn more</a>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+    <section class="accordions">
+      <div class="container accordion-container">
+        <article class="accordion-faq">
+          <div class="toggle">
+            <span>+</span>
+          </div>
+          <div class="QNA">
+            <h5>What business is the most lucrative in Nigeria?</h5>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
+              neque eos aliquam odit eligendi, aspernatur, esse repellendus
+              velit praesentium ipsa id? Beatae ex totam sunt eveniet obcaecati!
+              Tempore, quibusdam odio?
+            </p>
+          </div>
+        </article>
+        <article class="accordion-faq">
+          <div class="toggle">
+            <span>+</span>
+          </div>
+          <div class="QNA">
+            <h5>What business is the most lucrative in Nigeria?</h5>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
+              neque eos aliquam odit eligendi, aspernatur, esse repellendus
+              velit praesentium ipsa id? Beatae ex totam sunt eveniet obcaecati!
+              Tempore, quibusdam odio?
+            </p>
+          </div>
+        </article>
+        <article class="accordion-faq">
+          <div class="toggle">
+            <span>+</span>
+          </div>
+          <div class="QNA">
+            <h5>What business is the most lucrative in Nigeria?</h5>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
+              neque eos aliquam odit eligendi, aspernatur, esse repellendus
+              velit praesentium ipsa id? Beatae ex totam sunt eveniet obcaecati!
+              Tempore, quibusdam odio?
+            </p>
+          </div>
+        </article>
+        <article class="accordion-faq">
+          <div class="toggle">
+            <span>+</span>
+          </div>
+          <div class="QNA">
+            <h5>What business is the most lucrative in Nigeria?</h5>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
+              neque eos aliquam odit eligendi, aspernatur, esse repellendus
+              velit praesentium ipsa id? Beatae ex totam sunt eveniet obcaecati!
+              Tempore, quibusdam odio?
+            </p>
+          </div>
+        </article>
+        <article class="accordion-faq">
+          <div class="toggle">
+            <span>+</span>
+          </div>
+          <div class="QNA">
+            <h5>What business is the most lucrative in Nigeria?</h5>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
+              neque eos aliquam odit eligendi, aspernatur, esse repellendus
+              velit praesentium ipsa id? Beatae ex totam sunt eveniet obcaecati!
+              Tempore, quibusdam odio?
+            </p>
+          </div>
+        </article>
+        <article class="accordion-faq">
+          <div class="toggle">
+            <span>+</span>
+          </div>
+          <div class="QNA">
+            <h5>What business is the most lucrative in Nigeria?</h5>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
+              neque eos aliquam odit eligendi, aspernatur, esse repellendus
+              velit praesentium ipsa id? Beatae ex totam sunt eveniet obcaecati!
+              Tempore, quibusdam odio?
+            </p>
+          </div>
+        </article>
+        <article class="accordion-faq">
+          <div class="toggle">
+            <ion-icon name="add-outline"></ion-icon>
+          </div>
+          <div class="QNA">
+            <h5>What business is the most lucrative in Nigeria?</h5>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
+              neque eos aliquam odit eligendi, aspernatur, esse repellendus
+              velit praesentium ipsa id? Beatae ex totam sunt eveniet obcaecati!
+              Tempore, quibusdam odio?
+            </p>
+          </div>
+        </article>
+        <article class="accordion-faq">
+          <div class="toggle">
+            <span>+</span>
+          </div>
+          <div class="QNA">
+            <h5>What business is the most lucrative in Nigeria?</h5>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
+              neque eos aliquam odit eligendi, aspernatur, esse repellendus
+              velit praesentium ipsa id? Beatae ex totam sunt eveniet obcaecati!
+              Tempore, quibusdam odio?
+            </p>
+          </div>
+        </article>
       </div>
     </section>
     <section class="form">
