--- a/index.html
+++ b/index.html
@@ -174,8 +174,7 @@
     <section class="accordions">
       <div class="container accordion-container">
         <article class="accordion-faq">
-          <div class="toggle">
-            <span>+</span>
+          
           </div>
           <div class="QNA">
             <h5>What business is the most lucrative in Nigeria?</h5>
@@ -259,7 +258,7 @@
         </article>
         <article class="accordion-faq">
           <div class="toggle">
-            <ion-icon name="add-outline"></ion-icon>
+            <span>+</span>
           </div>
           <div class="QNA">
             <h5>What business is the most lucrative in Nigeria?</h5>
@@ -273,7 +272,8 @@
         </article>
         <article class="accordion-faq">
           <div class="toggle">
-            <span>+</span>
+            <img src="./images/" alt="" />
+            <!-- <span class="minus">-</span> -->
           </div>
           <div class="QNA">
             <h5>What business is the most lucrative in Nigeria?</h5>
