--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a href="">Testimonial</a></li>
           </ul>
           <div class="nav-btn">
-            <a href="" class="btn btn-outline btn-sm">Join Us</a>
+            <a href="" class="btn btn-outline btn-sm btn-open-modal">Join Us</a>
             <div class="search">
               <ion-icon name="search-outline"></ion-icon>
               <span>Search</span>
@@ -56,7 +56,9 @@
           </p>
           <div class="hero-btn">
             <a href="" class="btn btn1">Get Started &darr;</a>
-            <a href="" class="btn btn-outline">Download memo &darr;</a>
+            <a href="" class="btn btn-outline btn-open-modal"
+              >Download memo &darr;</a
+            >
           </div>
         </div>
         <div class="hero-right">
@@ -68,7 +70,7 @@
     </main>
     <section class="features">
       <div class="container">
-        <h1>Life is business <span>Business is Life </span></h1>
+        <h1>Life is business, <span>Business is Life </span></h1>
         <div class="features-container">
           <div class="feature-left">
             <!-- <p class="feature">Feature Business</p> -->
@@ -116,7 +118,7 @@
     <section class="feature2">
       <div class="container">
         <div class="biz-text">
-          <h2>Invest wisely and efficiently</h2>
+          <h2>Invest wisely <span>and efficiently</span></h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum,
             mollitia reiciendis. Odio ullam beatae eos nam officiis magni sit
@@ -174,115 +176,99 @@
     <section class="accordions">
       <div class="container accordion-container">
         <article class="accordion-faq">
-          
-          </div>
           <div class="QNA">
-            <h5>What business is the most lucrative in Nigeria?</h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
-              neque eos aliquam odit eligendi, aspernatur, esse repellendus
-              velit praesentium ipsa id? Beatae ex totam sunt eveniet obcaecati!
-              Tempore, quibusdam odio?
-            </p>
+            <div class="question">
+              <h5>How do I start a business?</h5>
+              <ion-icon name="chevron-down-outline" class="icon"></ion-icon>
+            </div>
+            <div class="ans">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Dolorem neque eos aliquam odit eligendi, aspernatur, esse
+                repellendus velit praesentium ipsa id? Beatae ex totam sunt
+                eveniet obcaecati?
+              </p>
+            </div>
           </div>
         </article>
         <article class="accordion-faq">
-          <div class="toggle">
-            <span>+</span>
-          </div>
           <div class="QNA">
-            <h5>What business is the most lucrative in Nigeria?</h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
-              neque eos aliquam odit eligendi, aspernatur, esse repellendus
-              velit praesentium ipsa id? Beatae ex totam sunt eveniet obcaecati!
-              Tempore, quibusdam odio?
-            </p>
+            <div class="question">
+              <h5>How much money can start a Business?</h5>
+              <ion-icon name="chevron-down-outline" class="icon"></ion-icon>
+            </div>
+            <div class="ans">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Dolorem neque eos aliquam odit eligendi, aspernatur, esse
+                repellendus velit praesentium ipsa id? Beatae ex totam sunt
+                eveniet obcaecati?
+              </p>
+            </div>
           </div>
         </article>
         <article class="accordion-faq">
-          <div class="toggle">
-            <span>+</span>
-          </div>
           <div class="QNA">
-            <h5>What business is the most lucrative in Nigeria?</h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
-              neque eos aliquam odit eligendi, aspernatur, esse repellendus
-              velit praesentium ipsa id? Beatae ex totam sunt eveniet obcaecati!
-              Tempore, quibusdam odio?
-            </p>
+            <div class="question">
+              <h5>Do u partner with any bank in Nigeria?</h5>
+              <ion-icon name="chevron-down-outline" class="icon"></ion-icon>
+            </div>
+            <div class="ans">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Dolorem neque eos aliquam odit eligendi, aspernatur, esse
+                repellendus velit praesentium ipsa id? Beatae ex totam sunt
+                eveniet obcaecati?
+              </p>
+            </div>
           </div>
         </article>
         <article class="accordion-faq">
-          <div class="toggle">
-            <span>+</span>
-          </div>
           <div class="QNA">
-            <h5>What business is the most lucrative in Nigeria?</h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
-              neque eos aliquam odit eligendi, aspernatur, esse repellendus
-              velit praesentium ipsa id? Beatae ex totam sunt eveniet obcaecati!
-              Tempore, quibusdam odio?
-            </p>
+            <div class="question">
+              <h5>Where can I start a business in Nigeria?</h5>
+              <ion-icon name="chevron-down-outline" class="icon"></ion-icon>
+            </div>
+            <div class="ans">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Dolorem neque eos aliquam odit eligendi, aspernatur, esse
+                repellendus velit praesentium ipsa id? Beatae ex totam sunt
+                eveniet obcaecati?
+              </p>
+            </div>
           </div>
         </article>
         <article class="accordion-faq">
-          <div class="toggle">
-            <span>+</span>
-          </div>
           <div class="QNA">
-            <h5>What business is the most lucrative in Nigeria?</h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
-              neque eos aliquam odit eligendi, aspernatur, esse repellendus
-              velit praesentium ipsa id? Beatae ex totam sunt eveniet obcaecati!
-              Tempore, quibusdam odio?
-            </p>
+            <div class="question">
+              <h5>How do I start a business?</h5>
+              <ion-icon name="chevron-down-outline" class="icon"></ion-icon>
+            </div>
+            <div class="ans">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Dolorem neque eos aliquam odit eligendi, aspernatur, esse
+                repellendus velit praesentium ipsa id? Beatae ex totam sunt
+                eveniet obcaecati?
+              </p>
+            </div>
           </div>
         </article>
         <article class="accordion-faq">
-          <div class="toggle">
-            <span>+</span>
-          </div>
           <div class="QNA">
-            <h5>What business is the most lucrative in Nigeria?</h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
-              neque eos aliquam odit eligendi, aspernatur, esse repellendus
-              velit praesentium ipsa id? Beatae ex totam sunt eveniet obcaecati!
-              Tempore, quibusdam odio?
-            </p>
-          </div>
-        </article>
-        <article class="accordion-faq">
-          <div class="toggle">
-            <span>+</span>
-          </div>
-          <div class="QNA">
-            <h5>What business is the most lucrative in Nigeria?</h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
-              neque eos aliquam odit eligendi, aspernatur, esse repellendus
-              velit praesentium ipsa id? Beatae ex totam sunt eveniet obcaecati!
-              Tempore, quibusdam odio?
-            </p>
-          </div>
-        </article>
-        <article class="accordion-faq">
-          <div class="toggle">
-            <img src="./images/" alt="" />
-            <!-- <span class="minus">-</span> -->
-          </div>
-          <div class="QNA">
-            <h5>What business is the most lucrative in Nigeria?</h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
-              neque eos aliquam odit eligendi, aspernatur, esse repellendus
-              velit praesentium ipsa id? Beatae ex totam sunt eveniet obcaecati!
-              Tempore, quibusdam odio?
-            </p>
+            <div class="question">
+              <h5>How much money can start a Business?</h5>
+              <ion-icon name="chevron-down-outline" class="icon"></ion-icon>
+            </div>
+            <div class="ans">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Dolorem neque eos aliquam odit eligendi, aspernatur, esse
+                repellendus velit praesentium ipsa id? Beatae ex totam sunt
+                eveniet obcaecati?
+              </p>
+            </div>
           </div>
         </article>
       </div>
@@ -290,15 +276,21 @@
     <section class="form">
       <div class="container form-cotainer">
         <div class="modal hidden">
-          <button class="btn--close-modal">&times;</button>
-          <h2 class="modal__header">Join Us</h2>
+          <button class="btn-close-modal">&times;</button>
+          <h2 class="modal__header">Join Us Now</h2>
           <form class="modal__form">
-            <label for="full-name">Full Name</label>
-            <input type="text" name="full-name" id="full-name" required />
+            <div class="names">
+              <div class="fname">
+                <label for="first-name">First Name</label>
+                <input type="text" name="first-name" id="first-name" required />
+              </div>
+              <div class="lname">
+                <label for="last-name">Last Name</label>
+                <input type="text" name="last-name" id="last-name" required />
+              </div>
+            </div>
             <label for="email">Email Address</label>
             <input type="email" name="email" id="email" required />
-            <label for="address">Home Address</label>
-            <input type="text" name="address" id="address" required />
             <label for="message">Message</label>
             <textarea name="" id="" cols="30" rows="3"></textarea>
             <button class="btn">Submit &rarr;</button>
