--- a/index.html
+++ b/index.html
@@ -18,22 +18,24 @@
   </head>
   <body>
     <header class="header">
-      <nav>
+      <nav class="nav">
         <div class="container nav-container">
           <a href=""
             ><img src="/images/logo.png" alt="logo-image" class="logo"
           /></a>
           <ul class="nav-links">
-            <li><a href="">Home</a></li>
-            <li><a href="">Feature</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Testimonial</a></li>
+            <li><a href="" class="nav-link">Home</a></li>
+            <li><a href="" class="nav-link">Feature</a></li>
+            <li><a href="" class="nav-link">About</a></li>
+            <li><a href="" class="nav-link">Testimonial</a></li>
           </ul>
           <div class="nav-btn">
-            <a href="" class="btn btn-outline btn-sm btn-open-modal">Join Us</a>
+            <a href="" class="btn btn-outline btn-sm btn-open-modal nav-link"
+              >Join Us</a
+            >
             <div class="search">
               <ion-icon name="search-outline"></ion-icon>
-              <span>Search</span>
+              <span class="nav-link">Search</span>
             </div>
             <!-- <a href="" class="btn btn-sm">Join Us</a> -->
           </div>
@@ -68,7 +70,7 @@
         </div>
       </div>
     </main>
-    <section class="features">
+    <section class="features" id="section-1">
       <div class="container">
         <h1>Life is business, <span>Business is Life </span></h1>
         <div class="features-container">
