--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         </article>
       </div>
     </section>
-    <section class="form">
+    <div class="form">
       <div class="container form-cotainer">
         <div class="modal hidden">
           <button class="btn-close-modal">&times;</button>
@@ -300,6 +300,6 @@
         </div>
         <div class="overlay hidden"></div>
       </div>
-    </section>
+    </div>
   </body>
 </html>
