--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
       </div>
     </section>
     <section class="accordions">
+      <!-- <h1>Our frequently ask question</h1> -->
       <div class="container accordion-container">
         <article class="accordion-faq">
           <div class="QNA">
