--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       nomodule
       src="https://unpkg.com/ionicons@5.4.0/distionicons/ionicons.js"
     ></script>
-    <script defer src="main.js"></script>
     <link rel="stylesheet" href="css/style.css" />
     <title>BizUp | WELCOME TO OUR OFFICIAL WEBSITE</title>
+    <script defer src="main.js"></script>
   </head>
   <body>
     <header class="header">
@@ -58,7 +58,7 @@
           </p>
           <div class="hero-btn">
             <a href="" class="btn btn1">Get Started &darr;</a>
-            <a href="" class="btn btn-outline btn-open-modal"
+            <a href="" class="btn btn-outline btn-open-modal btn-mobile"
               >Download memo &darr;</a
             >
           </div>
@@ -176,7 +176,9 @@
       </div>
     </section>
     <section class="accordions">
-      <!-- <h1>Our frequently ask question</h1> -->
+      <div class="container">
+        <h1 class="accd">Our frequently ask question</h1>
+      </div>
       <div class="container accordion-container">
         <article class="accordion-faq">
           <div class="QNA">
@@ -274,6 +276,88 @@
             </div>
           </div>
         </article>
+      </div>
+    </section>
+    <section>
+      <div class="container">
+        <div class="slider">
+          <!-- <div class="slide slide-1">
+            <div class="slide--contents">
+              <h5 class="slide--content-head">
+                Best financial Advise for you business!
+              </h5>
+              <blockquote class="slide--content-text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Accusantium quas quisquam non? Quas voluptate nulla minima
+                deleniti optio ullam nesciunt, numquam corporis et asperiores
+                laboriosam sunt, praesentium suscipit blanditiis. Necessitatibus
+                id alias reiciendis, perferendis facere pariatur dolore veniam
+                autem esse non voluptatem saepe provident
+              </blockquote>
+              <address class="author">
+                <img src="images/student3.jpg" alt="" class="slider__photo" />
+                <div class="author-details">
+                  <h6 class="author-name">Chester Tife</h6>
+                  <p class="job">Finance advisory / DGO</p>
+                </div>
+              </address>
+            </div>
+          </div>
+          <div class="slide slide-2">
+            <div class="slide--contents">
+              <h5 class="slide--content-head">
+                Go to any bank and pick a loan asap!
+              </h5>
+              <blockquote class="slide--content-text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Accusantium quas quisquam non? Quas voluptate nulla minima
+                deleniti optio ullam nesciunt, numquam corporis et asperiores
+                laboriosam sunt, praesentium suscipit blanditiis. Necessitatibus
+                id alias reiciendis, perferendis facere pariatur dolore veniam
+                autem esse non voluptatem saepe provident
+              </blockquote>
+              <address class="author">
+                <img src="images/student3.jpg" alt="" class="slider__photo" />
+                <div class="author-details">
+                  <h6 class="author-name">Chester Tife</h6>
+                  <p class="job">Finance advisory / DGO</p>
+                </div>
+              </address>
+            </div>
+          </div>
+          <div class="slide slide-3">
+            <div class="slide--contents">
+              <h5 class="slide--content-head">
+                Araange yor business in order to slide properly!
+              </h5>
+              <blockquote class="slide--content-text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Accusantium quas quisquam non? Quas voluptate nulla minima
+                deleniti optio ullam nesciunt, numquam corporis et asperiores
+                laboriosam sunt, praesentium suscipit blanditiis. Necessitatibus
+                id alias reiciendis, perferendis facere pariatur dolore veniam
+                autem esse non voluptatem saepe provident
+              </blockquote>
+              <address class="author">
+                <img src="images/student2.jpg" alt="" class="slider__photo" />
+                <div class="author-details">
+                  <h6 class="author-name">Chester Tife</h6>
+                  <p class="job">Finance advisory / DGO</p>
+                </div>
+              </address>
+            </div>
+          </div> -->
+          <div class="slide"><img src="images/enterpricing.jpg" alt="" /></div>
+          <div class="slide">
+            <img src="images/Accounting-Finance.jpg" alt="" />
+          </div>
+          <div class="slide">
+            <img src="images/banking.png" alt="" />
+          </div>
+          <button class="slider__btn slider__btn--left"><</button>
+          <button class="slider__btn slider__btn--right">></button>
+          <div class="dots"></div>
+        </div>
       </div>
     </section>
     <div class="form">
