--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script defer src="main.js"></script>
   </head>
   <body>
+    <!-- Header starts here -->
     <header class="header">
       <nav class="nav">
         <div class="container nav-container">
@@ -46,6 +47,10 @@
         </div>
       </nav>
     </header>
+    <div class="scroll-to-top">
+      <ion-icon name="arrow-up"></ion-icon>
+    </div>
+    <!-- Hero section -->
     <main class="hero">
       <div class="container hero-container">
         <div class="hero-left">
@@ -70,6 +75,8 @@
         </div>
       </div>
     </main>
+
+    <!-- Features -->
     <section class="features" id="section-1">
       <div class="container">
         <h1>Life is business, <span>Business is Life </span></h1>
@@ -175,6 +182,8 @@
         </div>
       </div>
     </section>
+
+    <!-- Accordion Section -->
     <section class="accordions">
       <div class="container">
         <h1 class="accd">Our frequently ask question</h1>
@@ -278,88 +287,97 @@
         </article>
       </div>
     </section>
+
+    <!-- Slider section -->
     <section>
       <div class="container">
-        <div class="slider">
-          <!-- <div class="slide slide-1">
-            <div class="slide--contents">
-              <h5 class="slide--content-head">
-                Best financial Advise for you business!
-              </h5>
-              <blockquote class="slide--content-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Accusantium quas quisquam non? Quas voluptate nulla minima
-                deleniti optio ullam nesciunt, numquam corporis et asperiores
-                laboriosam sunt, praesentium suscipit blanditiis. Necessitatibus
-                id alias reiciendis, perferendis facere pariatur dolore veniam
-                autem esse non voluptatem saepe provident
-              </blockquote>
-              <address class="author">
-                <img src="images/student3.jpg" alt="" class="slider__photo" />
-                <div class="author-details">
-                  <h6 class="author-name">Chester Tife</h6>
-                  <p class="job">Finance advisory / DGO</p>
-                </div>
-              </address>
+        <div class="slider-box">
+          <div class="slider">
+            <div class="slide slide-1">
+              <div class="slide--contents">
+                <h5 class="slide--content-head">
+                  Best financial Advise for you business!
+                </h5>
+                <blockquote class="slide--content-text">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Accusantium quas quisquam non? Quas voluptate nulla minima
+                  deleniti optio ullam nesciunt, numquam corporis et asperiores
+                  laboriosam sunt, praesentium suscipit blanditiis.
+                  Necessitatibus id alias reiciendis, perferendis facere
+                  pariatur dolore veniam autem esse non voluptatem saepe
+                  provident
+                </blockquote>
+                <address class="author">
+                  <img src="images/student3.jpg" alt="" class="slider__photo" />
+                  <div class="author-details">
+                    <h6 class="author-name">Chester Tife</h6>
+                    <p class="job">Finance advisory / DGO</p>
+                  </div>
+                </address>
+              </div>
             </div>
-          </div>
-          <div class="slide slide-2">
-            <div class="slide--contents">
-              <h5 class="slide--content-head">
-                Go to any bank and pick a loan asap!
-              </h5>
-              <blockquote class="slide--content-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Accusantium quas quisquam non? Quas voluptate nulla minima
-                deleniti optio ullam nesciunt, numquam corporis et asperiores
-                laboriosam sunt, praesentium suscipit blanditiis. Necessitatibus
-                id alias reiciendis, perferendis facere pariatur dolore veniam
-                autem esse non voluptatem saepe provident
-              </blockquote>
-              <address class="author">
-                <img src="images/student3.jpg" alt="" class="slider__photo" />
-                <div class="author-details">
-                  <h6 class="author-name">Chester Tife</h6>
-                  <p class="job">Finance advisory / DGO</p>
-                </div>
-              </address>
+            <div class="slide slide-2">
+              <div class="slide--contents">
+                <h5 class="slide--content-head">
+                  Go to any bank and pick a loan asap!
+                </h5>
+                <blockquote class="slide--content-text">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Accusantium quas quisquam non? Quas voluptate nulla minima
+                  deleniti optio ullam nesciunt, numquam corporis et asperiores
+                  laboriosam sunt, praesentium suscipit blanditiis.
+                  Necessitatibus id alias reiciendis, perferendis facere
+                  pariatur dolore veniam autem esse non voluptatem saepe
+                  provident
+                </blockquote>
+                <address class="author">
+                  <img src="images/student3.jpg" alt="" class="slider__photo" />
+                  <div class="author-details">
+                    <h6 class="author-name">Chester Tife</h6>
+                    <p class="job">Finance advisory / DGO</p>
+                  </div>
+                </address>
+              </div>
             </div>
-          </div>
-          <div class="slide slide-3">
-            <div class="slide--contents">
-              <h5 class="slide--content-head">
-                Araange yor business in order to slide properly!
-              </h5>
-              <blockquote class="slide--content-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Accusantium quas quisquam non? Quas voluptate nulla minima
-                deleniti optio ullam nesciunt, numquam corporis et asperiores
-                laboriosam sunt, praesentium suscipit blanditiis. Necessitatibus
-                id alias reiciendis, perferendis facere pariatur dolore veniam
-                autem esse non voluptatem saepe provident
-              </blockquote>
-              <address class="author">
-                <img src="images/student2.jpg" alt="" class="slider__photo" />
-                <div class="author-details">
-                  <h6 class="author-name">Chester Tife</h6>
-                  <p class="job">Finance advisory / DGO</p>
-                </div>
-              </address>
+            <div class="slide slide-3">
+              <div class="slide--contents">
+                <h5 class="slide--content-head">
+                  Araange yor business in order to slide properly!
+                </h5>
+                <blockquote class="slide--content-text">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Accusantium quas quisquam non? Quas voluptate nulla minima
+                  deleniti optio ullam nesciunt, numquam corporis et asperiores
+                  laboriosam sunt, praesentium suscipit blanditiis.
+                  Necessitatibus id alias reiciendis, perferendis facere
+                  pariatur dolore veniam autem esse non voluptatem saepe
+                  provident
+                </blockquote>
+                <address class="author">
+                  <img src="images/student2.jpg" alt="" class="slider__photo" />
+                  <div class="author-details">
+                    <h6 class="author-name">Chester Tife</h6>
+                    <p class="job">Finance advisory / DGO</p>
+                  </div>
+                </address>
+              </div>
             </div>
-          </div> -->
-          <div class="slide"><img src="images/enterpricing.jpg" alt="" /></div>
+            <!-- <div class="slide"><img src="images/enterpricing.jpg" alt="" /></div>
           <div class="slide">
             <img src="images/Accounting-Finance.jpg" alt="" />
           </div>
           <div class="slide">
             <img src="images/banking.png" alt="" />
+          </div> -->
+            <div class="dots"></div>
           </div>
           <button class="slider__btn slider__btn--left"><</button>
           <button class="slider__btn slider__btn--right">></button>
-          <div class="dots"></div>
         </div>
       </div>
     </section>
+
+    <!-- Modal Form Section -->
     <div class="form">
       <div class="container form-cotainer">
         <div class="modal hidden">
