--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       src="https://unpkg.com/ionicons@5.4.0/distionicons/ionicons.js"
     ></script>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" href="./images/logo.jpg" />
     <title>BizUp | WELCOME TO OUR OFFICIAL WEBSITE</title>
     <script defer src="main.js"></script>
   </head>
@@ -376,7 +377,72 @@
         </div>
       </div>
     </section>
-
+    <div class="tab-component">
+      <section>
+        <div class="container">
+          <div class="tab-title">
+            <h3>Take a risk and get better</h3>
+            <h4>Everything good is difficult but posible</h4>
+          </div>
+          <div class="tab-container">
+            <div class="tab-left">
+              <img src="./images/stock-exchange1.jpg" alt="" />
+            </div>
+            <div class="tab-right">
+              <div class="tab-btn-box">
+                <button
+                  class="btn-o tab-btn tab__btn--1 tab__btn--active"
+                  data-tab="1"
+                >
+                  Instant Loan
+                </button>
+                <button class="btn-o tab-btn tab__btn--2" data-tab="2">
+                  Business proposal
+                </button>
+                <button class="btn-o tab-btn tab__btn--3" data-tab="3">
+                  Contract award
+                </button>
+              </div>
+              <div class="tab-contents">
+                <div class="tab-content tab-content-1 tab-content--active">
+                  <h5 class="header">instantly! get a loan at 0%</h5>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat. ut
+                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                    commodo consequat.
+                  </p>
+                </div>
+                <div class="tab-content tab-content-2">
+                  <h5 class="header">Think deep every day</h5>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, ris nisi ut aliquip ex ea
+                    commodo consequat.
+                  </p>
+                  <div class="listing"></div>
+                </div>
+                <div class="tab-content tab-content-3">
+                  <h5 class="header">Best to boost income</h5>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat. ut
+                    labore et dolore magna aliqua. commodo consequat.
+                  </p>
+                  <div class="listing"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
     <!-- Modal Form Section -->
     <div class="form">
       <div class="container form-cotainer">
